# sf_wh

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: combat_concepts.md
notebooks/: SF-10 - wh40k - combat report.ipynb  SF-10 - wh40k - combat report.md  SF-10 - wh40k.md
rules/sf2/army/: army_enhancements_army1.csv
rules/sf2/core/: army_comp_rules_sf.py  combat_rules_sf.py
rules/template/stratagems/: stratagems_template.csv
sf_wh/: __init__.py  wh40k.py
sf_wh/common/: combat_rules.py  unit_loader.py
sf_wh/rules/: rulesets.yml
sf_wh/rules/gw/core/: army_comp_rules_gw.py  combat_rules_gw.py
sf_wh/rules/gw/units/: unit_defense_army1.csv  unit_weapons_army1.csv
sf_wh/rules/sf1/units/: unit_defense_army1.csv  unit_points_army1.csv
sf_wh/rules/sf2/core/: army_comp_rules_sf.py  combat_rules_sf.py
sf_wh/rules/sf2/units/: unit_weapons_army1.csv
sf_wh/rules/template/units/: unit_rules_template.csv  unit_weapons_template.csv
tests/: test_unit_loader.py
tests/common/: test_combat_rules.py  test_unit_loader.py
tests/data/units/: unit_defense_army1.csv  unit_weapons_army1.csv
