[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sf_wh"
version = "0.1.0"
description = "Warhammer 40K combat probability calculations"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "jupyter",
]

[tool.setuptools.packages.find]
include = ["sf_wh*"]
